service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zadanie2-service
spec:
  selector:
    app: zadanie2
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
  type: NodePort
